Update and rename production_detail_series.html to index.html

--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
   <body>
 
     <header>
-      <div id='logo'><a href='main_page.html'><img src="KTN_logo.png" width=8%></a></div>
+      <div id='logo'><a href='https://ktn1997.github.io/main_page/'><img src="KTN_logo.png" width=8%></a></div>
     </header>
 
     <menus>
       <div class='container'>
-        <div class = 'item'><a href='about.html'>ABOUT</a></div>
-        <div class = 'item'><a href='production.html'>PRODUCTION</a></div>
-        <div class = 'item'><a href='event.html'>EVENT</a></div>
-        <div class = 'item'><a href='contact.html'>CONTACT</a></div>
+        <div class = 'item'><a href='https://ktn1997.github.io/about/'>ABOUT</a></div>
+        <div class = 'item'><a href='https://ktn1997.github.io/production_main/'>PRODUCTION</a></div>
+        <div class = 'item'><a href='https://ktn1997.github.io/event/'>EVENT</a></div>
+        <div class = 'item'><a href='https://ktn1997.github.io/contact/'>CONTACT</a></div>
         <div class = 'item'><a href='http://intranet.ktn.ac.kr'>INTRANET</a></div>
       </div>
     </menus>
@@ -69,21 +69,21 @@
 
     <div class='container1'>
       <img src="오픈스테이지.png">
-      <img src="오픈스테이지 제작국원_송출멘트.png">
+      <img src="오픈스테이지 제작국원_송출멘트.png">
     </div>
 
     <h3><a href='https://www.youtube.com/watch?v=J2hxEefYg3U'>[[랜선 버스킹] *설렘주의* 고려대생이 부르는 자이언티 '꺼내먹어요' │ 고려대학교 오픈마이크</a><span style="color:grey; font-size: 0.8em" ;> &nbsp; &nbsp;2021.05.22</span></h3>
 
     <div class='container1'>
       <img src="오픈마이크.png">
-      <img src="오픈마이크 제작국원_송출멘트.png">
+      <img src="오픈마이크 제작국원_송출멘트.png">
     </div>
 
     <h3><a href='https://www.youtube.com/watch?v=yqMYFbYOIkU'>"철이 없었죠, 언어학과는 N개국어 뼈문과라고 생각한 것 자체가..."[고려대학교 학과소개영상 IN&OUT: 언어학과편]</a><span style="color:grey; font-size: 0.8em" ;> &nbsp; &nbsp;2021.04.12</span></h3>
 
     <div class='container1'>
       <img src="인앤아웃_언어학과.jpeg">
-      <img src="인앤아웃_언어학과 제작국원_송출멘트.png">
+      <img src="인앤아웃_언어학과 제작국원_송출멘트.png">
     </div>
 
   </td></tr>
